# gitignored

./: .env.deployment.example  .env.development  .env.example  .env.production  .env.production.example  .eslintrc  .gitattributes  .gitignore  .prettierignore  .prettierrc  .unimportedrc.json  CHANGELOG.md  Cargo.toml  Makefile  README.md  a.ts  gatsby-node.js  gatsby-node.ts  jest.config.cjs  knip.ts  next-sitemap.config.js  next.config.cjs  next.config.mjs  package.json  pnpm-lock.yaml  todo.md  tsconfig.json  vitest.config.ts
.github/workflows/: action.yaml  actions.yaml  root.yaml
apps/cli/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  package.json
apps/cli/config/: .env.development  .env.production
apps/web/: .gitignore  .prettierignore  Makefile  README.md  eslint.config.mjs  knip.ts  next.config.mjs  package.json  pnpm-lock.yaml  todo.md  tsconfig.json  vitest.config.ts
config/: .env.development  .env.testing
pages/: _app.tsx  _document.tsx  _error.tsx  index.tsx
pages/api/: commit-time.ts  generate.ts  gitignored.ts  names-and-contents.ts
pages/docs/: index.tsx
public/font/: jetbrains-mono-v17-latin-100.eot  jetbrains-mono-v17-latin-100italic.eot  jetbrains-mono-v17-latin-300.eot  jetbrains-mono-v17-latin-500.eot  jetbrains-mono-v17-latin-500italic.eot  jetbrains-mono-v17-latin-700.eot  jetbrains-mono-v17-latin-700italic.eot  jetbrains-mono-v17-latin-800.eot  jetbrains-mono-v17-latin-800italic.eot
script/: code-gen.js  generate-gatsby-config.js  package.json  pnpm-lock.yaml
script/ci-cd/: mongo-setup.js  setup.js
script/docker/: install.sh
script/env/: copy.ts  type-def.ts
script/formatter/: sql.ts
script/mongo-setup/: document.js  install.js  install.ts
script/publish/: index.js
script/site/: webmanifest.ts
src/: api.rs  cache.rs  cli.rs  env.rs  input.rs  main.rs  output.rs  types.rs  util.rs
src/api/: commit-time.ts  committime.ts  generate.ts  gitignored.ts  names-and-contents.ts  names.ts  response.rs
src/cache/: mod.rs  templates.rs  time.rs
src/cli/: mod.rs
src/common/: const.ts  type.ts
src/pages/: 404.tsx  index.tsx
src/scrapper/: index.ts
src/template/: index.tsx
src/theme/: Global.ts  theme.ts
src/web/: App.tsx  app.tsx
supabase/migrations/: 20240119031215_create-templates.sql
test/: index.ts  util.ts
test/integration/: caller.ts  index.test.ts
test/scrapper/: gitIgnoreTemplate.ts  index.ts  latestCommitTime.ts
test/server/: index.ts
test/snapshot/: browser.ts  index.test.ts
test/util/: index.ts
(+271 files in other folders)
