[package]
name = "gitignored"
version = "0.0.6"
edition = "2021"
authors = ["PoolOfDeath20 <gervinfungdaxuen@gmail.com>"]
description ="The CLI Application of Gitignored. Provide A Faster Way to Generate .gitignore File via Caching"
repository = "https://github.com/Gitignored-App/cli"
readme = "README.md"
homepage = "https://gitignored.vercel.app"
license-file = "LICENSE"
keywords = ["gitignore", "git", "generator"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src",
    "Cargo.toml",
    "Cargo.lock",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0.0"
directories = "4.0.1"
prettytable-rs = "0.8.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.10.0"
